k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iconatron
  namespace: iconatron
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iconatron
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: iconatron
    spec:
      containers:
        - name: iconatron
          image: michailzh/iconatron
          imagePullPolicy: IfNotPresent
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 200m
              memory: 128M
            requests:
              cpu: 20m
              memory: 64M
          securityContext:
            runAsUser: 1024
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
